refactor(service): improve DataTransformationService implementation
- Make enrichedData field final
- Remove System.out.println in favor of proper logging
- Initialize list in constructor